--- a/src/app/components/figures/figures.component.css
+++ b/src/app/components/figures/figures.component.css
@@ -174,6 +174,13 @@
   position: relative;
 }
 
+#excelFigure tr:first-child td {
+  position: sticky;
+  top: -1;
+  background-color: grey;
+  color: white;
+}
+
 #excelFigure td {
   border: 1px solid;
   width: 1%;
