--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,13 +11,16 @@
         </div>
     </div>
     <div id="firstSection">
+        <img class="sectionImage" src="../../../assets/images/general-science.jpg"/>
         <p class="sectionText">A single place for<br> all of your thoughts</p>        
     </div>
     <div id="secondSection">
-        <p [className]="sectionTwoDisplayed ? 'scrollSectionText' : 'invisibleSectionText'">Multiple workbooks <br>for easy organization</p>        
+        <img [className]="sectionTwoDisplayed ? 'scrollSectionImage' : 'invisibleSection'" src="../../../assets/images/general-science.jpg"/>
+        <p [className]="sectionTwoDisplayed ? 'scrollSectionText' : 'invisibleSection'">Multiple workbooks <br>for easy organization</p>        
     </div>
     <div id="thirdSection">
-        <p [className]="sectionThreeDisplayed ? 'scrollSectionText' : 'invisibleSectionText'">Add attachments <br>to every journal <br>in your workbook</p>        
+        <img [className]="sectionThreeDisplayed ? 'scrollSectionImage' : 'invisibleSection'" src="../../../assets/images/general-science.jpg"/>
+        <p [className]="sectionThreeDisplayed ? 'scrollSectionText' : 'invisibleSection'">Add attachments <br>to every journal <br>in your workbook</p>        
     </div>
     </div>
 
