--- a/src/app/components/edit-profile/edit-profile.component.html
+++ b/src/app/components/edit-profile/edit-profile.component.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<div id="mainContainer" style="margin-left: 27%;">
+<div id="mainContainer" style="margin-left: 40%;">
     <div id="profileContainer">
         <h1 style="text-align:center;">Edit Profile</h1>
         <table>
@@ -121,7 +121,8 @@
 <p-dialog class = "modalPopup" header="Submit Error" [(visible)]="displaySubmitErrorModal" [modal]="true" [style]="{width: '20vw', 'font-family': 'monospace'}"
 [draggable]="false" [resizable]="false">
     <p>What happened?</p>
-    <input type="text"/>
+    <textarea class="feedBackTextArea" [(ngModel)]="errorSubmissionText"></textarea>
+    <img class="feedbackLoadingIcon" *ngIf="displayFeedbackLoadingIcon" src="../../../assets/images/loading.gif"/>
     <ng-template pTemplate="footer">
         <button class="figureModalBtn" (click)="attemptErrorSubmission()">Submit Error</button>
         <button class="figureModalBtn" (click)="closeSubmitErrorModal()">Exit</button>
@@ -129,8 +130,9 @@
 </p-dialog>
 <p-dialog class = "modalPopup" header="Submit Suggestion" [(visible)]="displaySuggestionModal" [modal]="true" [style]="{width: '20vw', 'font-family': 'monospace'}"
 [draggable]="false" [resizable]="false">
-    <p>What feature would you like to see in the future??</p>
-    <input type="text"/>
+    <p>What feature would you like to see in the future?</p>
+    <textarea class="feedBackTextArea" [(ngModel)]="featureRequestText"></textarea>
+    <img class="feedbackLoadingIcon" *ngIf="displayFeedbackLoadingIcon" src="../../../assets/images/loading.gif"/>
     <ng-template pTemplate="footer">
         <button class="figureModalBtn" (click)="attemptSuggestionSubmission()">Submit Suggestion</button>
         <button class="figureModalBtn" (click)="closeSuggestionModal()">Exit</button>
