--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -48,7 +48,27 @@ hr {
   animation-fill-mode: both;
 }
 
-.invisibleSectionText {
+.sectionImage {
+  float: left;
+  margin-top: 8em;
+  margin-left: 10em;
+  border: 1px solid black;
+  animation-name: imageFadeIn;
+  animation-duration: .6s;
+  animation-delay: 1.4s;
+  animation-fill-mode: both;
+}
+
+.scrollSectionImage {
+  float: left;
+  margin-top: 8em;
+  margin-left: 10em;
+  border: 1px solid black;
+  animation-name: imageFadeIn;
+  animation-duration: .6s;
+  animation-fill-mode: both;
+}
+.invisibleSection {
   display: none;
 }
 
@@ -56,6 +76,13 @@ hr {
   from {opacity: 0; margin-top: 10px;}
   to {opacity: 1; margin-top: 0px;}
 }
+
+@keyframes imageFadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+
 
 #firstSection {
   height: 55em;
