--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
     <div scroll="onScroll()">
     <div class="wrapper">
         <div class="typing-demo">
-          <h1>PRIMMY</h1>
+          <h1 id="primmy">PRIMMY</h1>
         </div>
     </div>
     <div id="firstSection">
