--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -13,7 +13,10 @@
             <span>
                 <label for="passwordInput" class="inputLabel">Password</label>
                 <br>
-                <input id="passwordInput" type="password" formControlName="password"> 
+                <input id="passwordInput" type="password" formControlName="password">
+                <br>
+                <br>
+                <a class="userlinks" routerLink="/passwordReset">Forgot your password?</a> 
             </span>
         </div>
         <div class="form-item">
@@ -28,7 +31,7 @@
         <br>
         <br>
         <div class="form-item">
-            <a routerLink="/signup">Don't have an account?</a>
+            <a class="userlinks" routerLink="/signup">Don't have an account?</a>
         </div>
     </form>
 </div>
