--- a/src/app/components/password-reset/password-reset.component.css
+++ b/src/app/components/password-reset/password-reset.component.css
@@ -1,4 +1,4 @@
-#loginFormContainer {
+#passwordResetContainer {
     margin-left:auto;
     margin-right: auto;
     display: flex;
@@ -9,21 +9,8 @@
     font-family: monospace;
 }
 
-#loginHeader {
-    font-family: monospace;
-    font-size: 36px;
-}
-.form-input {
-    margin-top: 3.5em;
-}
-
-form {
-    border-radius: 5px;
-    padding: 4em;
-}
-
-button { 
-    width: 8em;
+#resetPasswordButton {
+    width: 10em;
     height: 2em;
     font-family: monospace;
     background-color:  #57CC99;
@@ -32,14 +19,13 @@ button {
     border-color: white;
 }
 
-.form-submit {   
-    height: 3em;
+#resetPasswordButton:hover {
+    cursor: pointer;
 }
 
-#incorrectCredentialsMsg {
-    color: white;
-}
-
-.userlinks {
-    font-family: monospace;
+.errorMessage {
+    margin-top: 5px;
+    position:absolute; 
+    margin-left: 3.6em;
+    color: red;
 }
