--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div id="signUpFormContainer">
     <form [formGroup] = "signUpForm" (ngSubmit)="onSubmit()">
         <p id="signUpHeader">Sign Up</p>
