--- a/src/app/components/new-password-input/new-password-input.component.css
+++ b/src/app/components/new-password-input/new-password-input.component.css
@@ -1,4 +1,4 @@
-#loginFormContainer {
+#newPasswordInputContainer {
     margin-left:auto;
     margin-right: auto;
     display: flex;
@@ -9,21 +9,8 @@
     font-family: monospace;
 }
 
-#loginHeader {
-    font-family: monospace;
-    font-size: 36px;
-}
-.form-input {
-    margin-top: 3.5em;
-}
-
-form {
-    border-radius: 5px;
-    padding: 4em;
-}
-
-button { 
-    width: 8em;
+#submitNewPasswordButton {
+    width: 10em;
     height: 2em;
     font-family: monospace;
     background-color:  #57CC99;
@@ -32,14 +19,14 @@ button {
     border-color: white;
 }
 
-.form-submit {   
-    height: 3em;
+#tooShortPasswordError {
+    position: absolute;
+    text-align: center;
+    color: red;
+    margin-left: -3.5em;
 }
 
-#incorrectCredentialsMsg {
-    color: white;
-}
-
-.userlinks {
-    font-family: monospace;
+.errorMessage {
+    color: red;
+    z-index: 5;
 }
