--- a/src/app/components/edit-profile/edit-profile.component.html
+++ b/src/app/components/edit-profile/edit-profile.component.html
@@ -114,7 +114,11 @@
                 <p id="userHasSuggestionMessage">Have a suggestion?</p>
                 <button class="userExperienceButton" (click)="showSuggestionModal()">Submit Suggestion</button>
             </div>
-            
+            <br>
+            <br>
+            <div style="margin-left: 31%">
+                <button id="logoutButton" (click)="showSuggestionModal()">Logout</button>
+            </div>
         </div>
     </div>
 </div>
