--- a/src/app/components/journal-header/journal-header.component.html
+++ b/src/app/components/journal-header/journal-header.component.html
@@ -1,6 +1,6 @@
 <div id="journalHeaderContainer">
     <a id="imageLink" routerLink="/">Primmy</a>
     <div id="profileContainer">
-        <a id="profileLabel" routerLink="/profile">Hey, Danny!</a>
+        <a id="profileLabel" routerLink="/profile">Hey, {{userName}}!</a>
     </div>
 </div>
