--- a/src/app/components/journalentries/journalentries.component.html
+++ b/src/app/components/journalentries/journalentries.component.html
@@ -13,7 +13,7 @@
                 <ng-template #showWorkbooks>
                     <div style="width: 7em; overflow-x: hidden; text-overflow: ellipsis; text-align: left;">
                         <i class="fa fa-caret-down" style="text-align: left;"></i>
-                        <span style="margin-left: 0em; font-size: 28px;"> {{currentWorkbook.workbookName}}S</span>
+                        <span style="margin-left: 0em; font-size: 28px;">{{currentWorkbook.workbookName}}</span>
                     </div>
                 </ng-template>
             </button>
